[project]
name = "grpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "0>=0.0.0",
    "accelerate==1.2.1",
    "active>=0.0.5a0",
    "datasets==3.2.0",
    "jupyter>=1.1.1",
    "openai>=1.109.1",
    "peft==0.14.0",
    "reasoning>=0.1.0",
    "reasoning-gym>=0.1.23",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "torch>=2.8.0",
    "transformers==4.47.1",
    "trl==0.14.0",
    "wandb==0.19.7",
]
